[package]
name = "v3tracking"
version = "0.1.0"
authors = ["VMM <vladimirov.m.m@ya.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "*"
actix-web = "2.0"
actix-rt = "1.0"
actix-files = "*"
toml = "*"
serde = "*"
